--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -5,4 +5,8 @@ hidden:
 - navigator
 ---
 
-{{ content }}
+{% for body in content.body %}
+    {{ body.name }}
+    {{ body.description }}
+{% endfor %}
+
