More layout testing

--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -5,8 +5,4 @@ hidden:
 - navigator
 ---
 
-{% for body in content.body %}
-    {{ body.name }}
-    {{ body.description }}
-{% endfor %}
-
+{{ content }}
