--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{ site.heading }} {{ site.subheading }} &dash; {{ page.title }} </title>
-    <link rel="icon" href="{{ site.url }}{{ site.favicon }}" type="image/x-icon" />
+    <link rel="icon" href="{{ site.url }}{{ site.baseurl }}{{ site.favicon }}" type="image/x-icon" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body class="bg-linear-to-t from-emerald-950 to-zinc-700 min-h-screen">
 <div class="max-w-4xl mx-auto bg-emerald-950 drop-shadow-lg rounded-b-3xl">
-    <header class="grid grid-cols-2 place-content-between bg-[url({{ site.url }}{{ site.header }})] bg-cover bg-center">
+    <header class="grid grid-cols-2 place-content-between bg-[url({{ site.url }}{{ site.baseurl }}{{ site.header }})] bg-cover bg-center">
         <div class="p-2">
             <img
                 class="w-48 object-contain md:object-cover"
                 alt="{{ site.heading }} {{ site.subheading }}"
-                src="{{ site.url }}{{ site.logo }}"
+                src="{{ site.url }}{{ site.baseurl }}{{ site.logo }}"
             />
         </div>
         <div class="place-self-end p-2">
