Wrap image url in quotes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-linear-to-t from-emerald-950 to-zinc-700 min-h-screen">
 <div class="max-w-4xl mx-auto bg-emerald-950 drop-shadow-lg rounded-b-3xl">
-    <header class="grid grid-cols-2 place-content-between bg-[url({{ site.url }}{{ site.baseurl }}{{ site.header }})] bg-cover bg-center">
+    <header class="grid grid-cols-2 place-content-between bg-[url('{{ site.url }}{{ site.baseurl }}{{ site.header }})'] bg-cover bg-center">
         <div class="p-2">
             <img
                 class="w-48 object-contain md:object-cover"
