--- a/_layouts/basic.html
+++ b/_layouts/basic.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <article class="p-8 h-full mb-8">
-    <div class="[&_p]:text-base text-white">
+    <div class="[&_p]:text-base text-white mb-4">
         {{ content }}
     </div>
 </article>
