--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <title>{{ site.heading }} {{ site.subheading }} &dash; {{ page.title }} </title>
     <link rel="icon" href="{{ site.url }}{{ site.baseurl }}{{ site.favicon }}" type="image/x-icon" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/public/asses/css/main.css" />
+    <link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/public/assets/css/main.css" />
 </head>
 <body class="bg-linear-to-t from-emerald-950 to-zinc-700 min-h-screen">
 <div class="max-w-4xl mx-auto bg-emerald-950 drop-shadow-lg rounded-b-3xl">
