--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,5 +1,6 @@
 article h1 {
   font-size: var(--text-3xl);
+  font-weight: 800;
   line-height: var(--text-3xl--line-height);
   color: var(--color-white);
   margin-bottom: calc(var(--spacing) * 8);
@@ -8,6 +9,7 @@ article h1 {
 
 article h2 {
   font-size: var(--text-2xl);
+  font-weight: 700;
   line-height: var(--text-2xl--line-height);
   color: var(--color-white);
   margin-bottom: calc(var(--spacing) * 7);
@@ -15,6 +17,7 @@ article h2 {
 
 article h3 {
   font-size: var(--text-xl);
+  font-weight: 600;
   line-height: var(--text-xl--line-height);
   color: var(--color-white);
   margin-bottom: calc(var(--spacing) * 6);
@@ -23,6 +26,7 @@ article h3 {
 
 article h4 {
   font-size: var(--text-lg);
+  font-weight: 500;
   line-height: var(--text-lg--line-height);
   color: var(--color-white);
   margin-bottom: calc(var(--spacing) * 5);
@@ -30,6 +34,7 @@ article h4 {
 
 article p {
   font-size: var(--text-base);
+  font-weight: 400;
   line-height: var(--text-base--line-height);color: var(--color-white);
   color: var(--color-white);
   margin-bottom: calc(var(--spacing) * 4);
