--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,41 +1,40 @@
 article h1 {
-  font-size: var(--text-3xl);
+  font-size: 1.875rem;
   font-weight: 800;
-  line-height: var(--text-3xl--line-height);
-  color: var(--color-white);
-  margin-bottom: calc(var(--spacing) * 8);
+  line-height: calc(2.25 / 1.875);
+  color: #fff;
+  margin-bottom: calc(0.25rem * 8);
 }
 
 
 article h2 {
-  font-size: var(--text-2xl);
+  font-size:  1.5rem;
   font-weight: 700;
-  line-height: var(--text-2xl--line-height);
-  color: var(--color-white);
-  margin-bottom: calc(var(--spacing) * 7);
+  line-height: calc(2.5 / 2.25);
+  color: #fff;
+  margin-bottom: calc(0.25rem * 7);
 }
 
 article h3 {
-  font-size: var(--text-xl);
+  font-size: 1.25rem;
   font-weight: 600;
-  line-height: var(--text-xl--line-height);
-  color: var(--color-white);
-  margin-bottom: calc(var(--spacing) * 6);
+  line-height: calc(1.75 / 1.25);
+  color: #fff;
+  margin-bottom: calc(0.25rem * 6);
 }
 
-
 article h4 {
-  font-size: var(--text-lg);
+  font-size: 1.125rem;
   font-weight: 500;
-  line-height: var(--text-lg--line-height);
-  color: var(--color-white);
-  margin-bottom: calc(var(--spacing) * 5);
+  line-height: calc(1.75 / 1.125);
+  color: #fff;
+  margin-bottom: calc(0.25rem * 5);
 }
 
 article p {
-  font-size: var(--text-base);
+  font-size: 1rem;
   font-weight: 400;
-  line-height: var(--text-base--line-height);color: var(--color-white);
-  color: var(--color-white);
-  margin-bottom: calc(var(--spacing) * 4);
+  line-height: calc(1.5 / 1);
+  color: #fff;
+  margin-bottom: calc(0.25rem * 4);
 }
